--- a/cell02/ex01/menu.html
+++ b/cell02/ex01/menu.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="dropdown">
-      <div class="dropdown__btn">Choose your choice</div>
+      <div class="dropdown__btn">Choose your ingredients</div>
       <ul class="dropdown__content">
         <li>Cheese</li>
         <li>Tomato</li>
