--- a/rush/index.html
+++ b/rush/index.html
@@ -5,7 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rush Project</title>
-    <link rel="stylesheet" href="" />
+    <!-- CSS -->
+    <link rel="stylesheet" href="assets/styles/index.css" />
+    <!-- Font awesome -->
+    <script
+      src="https://kit.fontawesome.com/2ebe22f94b.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
@@ -20,5 +26,72 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body></body>
+  <body>
+    <!------- Mobile Navbar -------->
+    <button
+      class="btn hamburger d-lg-none"
+      data-bs-toggle="offcanvas"
+      data-bs-target="#offcanvasExample"
+      aria-controls="offcanvasExample"
+    >
+      <i class="fa-solid fa-bars"></i>
+    </button>
+
+    <div
+      class="offcanvas offcanvas-start"
+      tabindex="-1"
+      id="offcanvasExample"
+      aria-labelledby="offcanvasExampleLabel"
+    >
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasExampleLabel"></h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="offcanvas"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="offcanvas-body">
+        <div>
+          <ul class="mobile__nav__list">
+            <li class="mobile__nav__item">Home</li>
+            <li class="mobile__nav__item">About</li>
+            <li class="mobile__nav__item">Contact</li>
+          </ul>
+          <!-- Put navbar body Here -->
+        </div>
+      </div>
+    </div>
+    <!------- End Mobile Nabbar -------->
+
+    <!------- Navbar -------->
+    <nav class="d-none d-lg-flex flex-column justify-content-center">
+      <ul>
+        <li class="nav__item">
+          <a href="#home">
+            <i class="fa-regular fa-house"></i>
+            <span>Home</span>
+          </a>
+        </li>
+        <li class="nav__item">
+          <a href="#about">
+            <i class="fa-solid fa-user"></i>
+            <span>About</span>
+          </a>
+        </li>
+        <li class="nav__item">
+          <a href="#contact">
+            <i class="fa-regular fa-envelope"></i>
+            <span>Contact</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <!------- End Navbar -------->
+
+    <div id="home" class="page">Hello World</div>
+    <div id="about" class="page">Hello World</div>
+    <div id="contact" class="page">Hello World</div>
+  </body>
 </html>
