add home and about page

--- a/rush/index.html
+++ b/rush/index.html
@@ -7,6 +7,13 @@
     <title>Rush Project</title>
     <!-- CSS -->
     <link rel="stylesheet" href="assets/styles/index.css" />
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
     <!-- Font awesome -->
     <script
       src="https://kit.fontawesome.com/2ebe22f94b.js"
@@ -90,8 +97,214 @@
     </nav>
     <!------- End Navbar -------->
 
-    <div id="home" class="page">Hello World</div>
-    <div id="about" class="page">Hello World</div>
-    <div id="contact" class="page">Hello World</div>
+    <!------- Home -------->
+    <div id="home" class="page">
+      <div class="home__content">
+        <h1>Zantaclaus</h1>
+        <p>I'm a Frontend Developer</p>
+      </div>
+    </div>
+    <!------- End Home -------->
+
+    <!------- About -------->
+    <div id="about" class="page container-lg">
+      <div class="header">
+        <h2>ABOUT</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia,
+          laboriosam voluptatum doloremque suscipit
+        </p>
+      </div>
+
+      <div class="about__information">
+        <div class="about__img"></div>
+        <div class="infomation__detail">
+          <!-- <h3>Personal Infomation</h3> -->
+          <div class="infomation__grid">
+            <div class="info">
+              <span>Name</span>
+              <p>Napat Moonpinit</p>
+            </div>
+            <div class="info">
+              <span>Nickname</span>
+              <p>Zantaclaus</p>
+            </div>
+            <div class="info">
+              <span>Age</span>
+              <p>21</p>
+            </div>
+            <div class="info">
+              <span>Birthday</span>
+              <p>1 May 2001</p>
+            </div>
+            <div class="info">
+              <span>City</span>
+              <p>Bangkok, Thailand</p>
+            </div>
+            <div class="info">
+              <span>Major</span>
+              <p>Computer Engineering</p>
+            </div>
+            <div class="info">
+              <span>Education</span>
+              <p>KMITL</p>
+            </div>
+            <div class="info">
+              <span>Hobby</span>
+              <p>Guitar and Games</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!------- Skill -------->
+      <div class="container-lg">
+        <div class="header">
+          <h2>SKILL</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia,
+            laboriosam voluptatum
+          </p>
+        </div>
+
+        <div class="progress__container">
+          <div class="progress__bar">
+            <div class="d-flex justify-content-between">
+              <h6>HTML</h6>
+              <h6>100%</h6>
+            </div>
+            <div class="progress">
+              <div
+                class="progress-bar progress-bar-striped progress--html"
+                role="progressbar"
+                aria-label="Default striped example"
+                aria-valuenow="10"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="width: 100%"
+              ></div>
+            </div>
+          </div>
+
+          <div class="progress__bar">
+            <div class="d-flex justify-content-between">
+              <h6>CSS</h6>
+              <h6>100%</h6>
+            </div>
+            <div class="progress">
+              <div
+                class="progress-bar progress-bar-striped progress--html"
+                role="progressbar"
+                aria-label="Default striped example"
+                aria-valuenow="10"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="width: 100%"
+              ></div>
+            </div>
+          </div>
+
+          <div class="progress__bar">
+            <div class="d-flex justify-content-between">
+              <h6>JS</h6>
+              <h6>100%</h6>
+            </div>
+            <div class="progress">
+              <div
+                class="progress-bar progress-bar-striped progress--html"
+                role="progressbar"
+                aria-label="Default striped example"
+                aria-valuenow="10"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="width: 100%"
+              ></div>
+            </div>
+          </div>
+
+          <div class="progress__bar">
+            <div class="d-flex justify-content-between">
+              <h6>React JS</h6>
+              <h6>100%</h6>
+            </div>
+            <div class="progress">
+              <div
+                class="progress-bar progress-bar-striped progress--html"
+                role="progressbar"
+                aria-label="Default striped example"
+                aria-valuenow="10"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="width: 100%"
+              ></div>
+            </div>
+          </div>
+
+          <div class="progress__bar">
+            <div class="d-flex justify-content-between">
+              <h6>Node.js</h6>
+              <h6>100%</h6>
+            </div>
+            <div class="progress">
+              <div
+                class="progress-bar progress-bar-striped progress--html"
+                role="progressbar"
+                aria-label="Default striped example"
+                aria-valuenow="10"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="width: 100%"
+              ></div>
+            </div>
+          </div>
+
+          <div class="progress__bar">
+            <div class="d-flex justify-content-between">
+              <h6>Docker</h6>
+              <h6>100%</h6>
+            </div>
+            <div class="progress">
+              <div
+                class="progress-bar progress-bar-striped progress--html"
+                role="progressbar"
+                aria-label="Default striped example"
+                aria-valuenow="10"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="width: 100%"
+              ></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!------- End About -------->
+
+    <!------- Contact -------->
+    <div id="contact" class="page">
+      <div class="header">
+        <h2>CONTACT</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia,
+          laboriosam voluptatum
+        </p>
+      </div>
+
+      <div class="contact__container">
+        <div class="contact__info">
+          <h6>Location</h6>
+        </div>
+        <div class="contact__info">
+          <h6>Email</h6>
+        </div>
+        <div class="contact__info">
+          <h6>Call</h6>
+        </div>
+        <div class="contact__info">
+          <h6>Location</h6>
+        </div>
+      </div>
+    </div>
+    <!------- End Contact -------->
   </body>
 </html>
