--- a/rush/index.html
+++ b/rush/index.html
@@ -60,13 +60,29 @@
         ></button>
       </div>
       <div class="offcanvas-body">
-        <div>
-          <ul class="mobile__nav__list">
-            <li class="mobile__nav__item">Home</li>
-            <li class="mobile__nav__item">About</li>
-            <li class="mobile__nav__item">Contact</li>
-          </ul>
-          <!-- Put navbar body Here -->
+        <div
+          class="mobile__nav__item"
+          onclick="scrollPage('home')"
+          data-bs-dismiss="offcanvas"
+        >
+          <i class="fa-regular fa-house"></i>
+          <span>Home</span>
+        </div>
+        <div
+          class="mobile__nav__item"
+          data-bs-dismiss="offcanvas"
+          onclick="scrollPage('about')"
+        >
+          <i class="fa-solid fa-user"></i>
+          <span>About</span>
+        </div>
+        <div
+          class="mobile__nav__item"
+          data-bs-dismiss="offcanvas"
+          onclick="scrollPage('contact')"
+        >
+          <i class="fa-regular fa-envelope"></i>
+          <span>Contact</span>
         </div>
       </div>
     </div>
@@ -119,7 +135,7 @@
       <div class="about__information">
         <div class="about__img"></div>
         <div class="infomation__detail">
-          <!-- <h3>Personal Infomation</h3> -->
+          <h3 class="d-lg-none">Personal Infomation</h3>
           <div class="infomation__grid">
             <div class="info">
               <span>Name</span>
@@ -158,130 +174,133 @@
       </div>
 
       <!------- Skill -------->
-      <div class="container-lg">
-        <div class="header">
-          <h2>SKILL</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia,
-            laboriosam voluptatum
-          </p>
+      <section class="skill">
+        <div class="container-lg">
+          <div class="header">
+            <h2>SKILL</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia,
+              laboriosam voluptatum
+            </p>
+          </div>
+
+          <div class="progress__container">
+            <div class="progress__bar">
+              <div class="d-flex justify-content-between">
+                <h6>HTML</h6>
+                <h6>100%</h6>
+              </div>
+              <div class="progress">
+                <div
+                  class="progress-bar progress-bar-striped progress--html"
+                  role="progressbar"
+                  aria-label="Default striped example"
+                  aria-valuenow="10"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  style="width: 100%"
+                ></div>
+              </div>
+            </div>
+
+            <div class="progress__bar">
+              <div class="d-flex justify-content-between">
+                <h6>CSS</h6>
+                <h6>100%</h6>
+              </div>
+              <div class="progress">
+                <div
+                  class="progress-bar progress-bar-striped progress--html"
+                  role="progressbar"
+                  aria-label="Default striped example"
+                  aria-valuenow="10"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  style="width: 100%"
+                ></div>
+              </div>
+            </div>
+
+            <div class="progress__bar">
+              <div class="d-flex justify-content-between">
+                <h6>JS</h6>
+                <h6>100%</h6>
+              </div>
+              <div class="progress">
+                <div
+                  class="progress-bar progress-bar-striped progress--html"
+                  role="progressbar"
+                  aria-label="Default striped example"
+                  aria-valuenow="10"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  style="width: 100%"
+                ></div>
+              </div>
+            </div>
+
+            <div class="progress__bar">
+              <div class="d-flex justify-content-between">
+                <h6>React JS</h6>
+                <h6>100%</h6>
+              </div>
+              <div class="progress">
+                <div
+                  class="progress-bar progress-bar-striped progress--html"
+                  role="progressbar"
+                  aria-label="Default striped example"
+                  aria-valuenow="10"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  style="width: 100%"
+                ></div>
+              </div>
+            </div>
+
+            <div class="progress__bar">
+              <div class="d-flex justify-content-between">
+                <h6>Node.js</h6>
+                <h6>100%</h6>
+              </div>
+              <div class="progress">
+                <div
+                  class="progress-bar progress-bar-striped progress--html"
+                  role="progressbar"
+                  aria-label="Default striped example"
+                  aria-valuenow="10"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  style="width: 100%"
+                ></div>
+              </div>
+            </div>
+
+            <div class="progress__bar">
+              <div class="d-flex justify-content-between">
+                <h6>Docker</h6>
+                <h6>100%</h6>
+              </div>
+              <div class="progress">
+                <div
+                  class="progress-bar progress-bar-striped progress--html"
+                  role="progressbar"
+                  aria-label="Default striped example"
+                  aria-valuenow="10"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  style="width: 100%"
+                ></div>
+              </div>
+            </div>
+          </div>
         </div>
-
-        <div class="progress__container">
-          <div class="progress__bar">
-            <div class="d-flex justify-content-between">
-              <h6>HTML</h6>
-              <h6>100%</h6>
-            </div>
-            <div class="progress">
-              <div
-                class="progress-bar progress-bar-striped progress--html"
-                role="progressbar"
-                aria-label="Default striped example"
-                aria-valuenow="10"
-                aria-valuemin="0"
-                aria-valuemax="100"
-                style="width: 100%"
-              ></div>
-            </div>
-          </div>
-
-          <div class="progress__bar">
-            <div class="d-flex justify-content-between">
-              <h6>CSS</h6>
-              <h6>100%</h6>
-            </div>
-            <div class="progress">
-              <div
-                class="progress-bar progress-bar-striped progress--html"
-                role="progressbar"
-                aria-label="Default striped example"
-                aria-valuenow="10"
-                aria-valuemin="0"
-                aria-valuemax="100"
-                style="width: 100%"
-              ></div>
-            </div>
-          </div>
-
-          <div class="progress__bar">
-            <div class="d-flex justify-content-between">
-              <h6>JS</h6>
-              <h6>100%</h6>
-            </div>
-            <div class="progress">
-              <div
-                class="progress-bar progress-bar-striped progress--html"
-                role="progressbar"
-                aria-label="Default striped example"
-                aria-valuenow="10"
-                aria-valuemin="0"
-                aria-valuemax="100"
-                style="width: 100%"
-              ></div>
-            </div>
-          </div>
-
-          <div class="progress__bar">
-            <div class="d-flex justify-content-between">
-              <h6>React JS</h6>
-              <h6>100%</h6>
-            </div>
-            <div class="progress">
-              <div
-                class="progress-bar progress-bar-striped progress--html"
-                role="progressbar"
-                aria-label="Default striped example"
-                aria-valuenow="10"
-                aria-valuemin="0"
-                aria-valuemax="100"
-                style="width: 100%"
-              ></div>
-            </div>
-          </div>
-
-          <div class="progress__bar">
-            <div class="d-flex justify-content-between">
-              <h6>Node.js</h6>
-              <h6>100%</h6>
-            </div>
-            <div class="progress">
-              <div
-                class="progress-bar progress-bar-striped progress--html"
-                role="progressbar"
-                aria-label="Default striped example"
-                aria-valuenow="10"
-                aria-valuemin="0"
-                aria-valuemax="100"
-                style="width: 100%"
-              ></div>
-            </div>
-          </div>
-
-          <div class="progress__bar">
-            <div class="d-flex justify-content-between">
-              <h6>Docker</h6>
-              <h6>100%</h6>
-            </div>
-            <div class="progress">
-              <div
-                class="progress-bar progress-bar-striped progress--html"
-                role="progressbar"
-                aria-label="Default striped example"
-                aria-valuenow="10"
-                aria-valuemin="0"
-                aria-valuemax="100"
-                style="width: 100%"
-              ></div>
-            </div>
-          </div>
-        </div>
-      </div>
+      </section>
     </div>
+
     <!------- End About -------->
 
     <!------- Contact -------->
-    <div id="contact" class="page">
+    <div id="contact" class="container-lg">
       <div class="header">
         <h2>CONTACT</h2>
         <p>
@@ -289,22 +308,68 @@
           laboriosam voluptatum
         </p>
       </div>
-
       <div class="contact__container">
         <div class="contact__info">
-          <h6>Location</h6>
+          <i class="fa-solid fa-location-dot"></i>
+          <div class="contact__detail">
+            <h6>Location</h6>
+            <p>A108 Street, New York, NY 535022</p>
+          </div>
         </div>
+
         <div class="contact__info">
-          <h6>Email</h6>
+          <i class="fa-regular fa-envelope"></i>
+          <div class="contact__detail">
+            <h6>Email</h6>
+            <p>zantaclaus@napat.com</p>
+          </div>
         </div>
+
         <div class="contact__info">
-          <h6>Call</h6>
-        </div>
-        <div class="contact__info">
-          <h6>Location</h6>
+          <i class="fa-solid fa-mobile"></i>
+          <div class="contact__detail">
+            <h6>Call</h6>
+            <p>+66 97-123-4567</p>
+          </div>
         </div>
       </div>
     </div>
     <!------- End Contact -------->
+
+    <footer>
+      <div class="container-lg p-4">
+        <div class="footer__header">
+          <h2>Zantaclaus</h2>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+
+        <div>
+          <ul class="social__list">
+            <li class="social__item">
+              <a href="https://github.com/zantaclaus" target="_blank">
+                <i class="fa-brands fa-github"></i>
+              </a>
+            </li>
+            <li class="social__item">
+              <a href="https://www.instagram.com/zantaclaus/" target="_blank">
+                <i class="fa-brands fa-instagram"></i>
+              </a>
+            </li>
+            <li class="social__item">
+              <a href="https://www.facebook.com/zantacluse/" target="_blank">
+                <i class="fa-brands fa-facebook"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <p class="copyright">
+          &copy; Copyright Zantaclaus. All Rights Reserved.
+        </p>
+      </div>
+    </footer>
+
+    <!-- JS -->
+    <script src="/assets/js/index.js"></script>
   </body>
 </html>
